PYIC-2077: Get ip-address from header and use alongside AuditEventUser.